--- a/package.json
+++ b/package.json
@@ -1,46 +1,52 @@
+code package.json
+
+
+
 {
-  "name": "my-react-app",
+  "name": "my-app",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "serve": "vite preview"
+  },
+  "dependencies": {
+    "@vueuse/core": "^9.11.0",
+    "vue": "^3.2.47"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.5",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "typescript": "^5.2.2",
+    "vite": "^4.0.0"
+  }
+}
+
+{
+  "name": "my-react-app",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tensorflow-models/pose-detection": "^2.1.3",
-    "@tensorflow/tfjs": "^4.22.0",
-    "axios": "^1.9.0",
     "firebase": "^11.6.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-dropzone": "^14.3.8",
-    "react-router-dom": "^7.5.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.26.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "vite": "^6.3.1"
-  },
-  "description": "<<<<<<< HEAD\r # my-react-app\r =======\r # React + Vite",
-  "main": "eslint.config.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/morales041986/my-react-app.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/morales041986/my-react-app/issues"
-  },
-  "homepage": "https://github.com/morales041986/my-react-app#readme"
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^6.3.4"
+  }
 }
+
+
+
+
+
+
+
+
