Add firebase.json for Firebase Hosting

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dist",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -14,8 +14,3 @@
     ]
   }
 }
-
-
-
-
-  
